--- a/package.json
+++ b/package.json
@@ -8,16 +8,28 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.2.17",
+    "autoprefixer": "^9",
+    "boxicons": "^2.1.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "postcss": "^7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "vue": "^2.6.11",
+    "vue-router": "^3.2.0",
+    "vuesax": "^4.0.1-alpha.25"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.49.0",
+    "sass-loader": "^10.2.1",
+    "vue-cli-plugin-tailwind": "~2.2.18",
+    "vue-cli-plugin-vuesax": "~1.0.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
