--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^2.6.11",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
-    "vuesax": "^4.0.1-alpha.25",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
